# endfire-sim

./: .gitignore  README.md  pyproject.toml
endfiresim/: algo.py  extended.py  sensor.py  wave.py
examples/: planar_wave_2D.ipynb  planar_wave_endfire_2D.ipynb  planar_wave_scenario.ipynb  spheric3D.ipynb  spheric_3D_scenario_endfire.ipynb  spheric_wave_2D.ipynb  spheric_wave_scenario.ipynb
examples/broadside/: spheric_2D_broadside_n.ipynb
examples/endfire/: planar_2D_endfire.ipynb  planar_2D_endfire_n.ipynb  spheric_2D_ideal_ring.ipynb  spheric_3D_endfire.ipynb
examples/ideal_cardioid/: planar_2D_ideal.ipynb  spheric_2D_ideal.ipynb  spheric_2D_ideal_ring.ipynb  spheric_3D_ideal.ipynb
examples/monopole/: planar_2D_monopole.ipynb  spheric_3D_monopole.ipynb
examples/synthetic_cardioid/: spheric_2D_synthetic.ipynb
examples/wave/: spheric_2D.ipynb  superposition_2D.ipynb
test/: test_algo.py  test_sensor.py  test_wave.py
